--- a/assets/css/font-awesome.css
+++ b/assets/css/font-awesome.css
@@ -62,7 +62,7 @@
   width: 1.25em; }
 
 .fa-ul {
-  list-style-type: none;
+  list-style: none;
   margin-left: 2.5em;
   padding-left: 0; }
   .fa-ul > li {
